<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="sidebar_dark">Dark</string>
<string name="sidebar_light">Light</string>
<string name="sidebar_transparent">Transparent</string>
<string name="menu_settings">Settings</string>
<string name="wallpaper_instructions">Select action</string>
<string name="search">Search</string>
<string name="bookmarks">Bookmarks</string>
<string name="refresh">Refresh</string>
<string name="stop">Stop</string>
<string name="home">Home</string>
<string name="set_home">Set as Homepage</string>
<string name="share">Share</string>
<string name="close">Close</string>
<string name="saveimage">Save Image</string>
<string name="openinnewtab">Open in New Tab</string>
<string name="mainsettingstitle">Main Settings</string>
<string name="sidebarsettingstitle">Sidebar Settings</string>
<string name="homesettingstitle">Home Page Settings</string>
<string name="advancedsettingstitle">Advanced Settings</string>
<string name="websettingstitle">Browser Settings</string>
<string name="actionbarcolortitle">ActionBar Color</string>
<string name="actionbarcolorsummary">Set the color of the actionbar</string>
<string name="pagetransparencytitle">Page Opacity</string>
<string name="pagetransparencysummary">Set the opacity of the App and Browser page</string>
<string name="fullscreentitle">Fullscreen</string>
<string name="fullscreensummary">Show or hide the Status Bar</string>
<string name="transparentnavtitle">Transparent Navigation Bar</string>
<string name="transparentnavsummary">Enable or Disable transparent Navigation Bar</string>
<string name="transparentstatustitle">Transparent Status Bar</string>
<string name="transparentstatussummary">Enable or Disable transparent Status Bar</string>
<string name="searchtexttitle">Custom Search Text</string>
<string name="searchtextsummary">Set the search text in the ActionBar</string>
<string name="searchtextmessage">Enter a Custom Search Text:</string>
<string name="sidebarthemetitle">Sidebar Theme</string>
<string name="sidebarthemesummary">Set the Sidebar Theme</string>
<string name="sidebarthememessage">Select a Theme:</string>
<string name="sidebariconsizetitle">Sidebar Icon Size</string>
<string name="sidebariconsizesummary">Set the icon size in the Sidebar</string>
<string name="sidebariconsizemessage">Select the Icon Size:</string>
<string name="sidebariconpaddingtitle">Sidebar Icon Padding</string>
<string name="sidebariconpaddingsummary">Set the padding around Sidebar Icons</string>
<string name="sidebariconpaddingmessage">Select the Sidebar Icon Padding:</string>
<string name="sidebarhidelabeltitle">App Label</string>
<string name="sidebarhidelabelsummary">Show or hide the labels beside each icon</string>
<string name="sidebartransparencytitle">Sidebar Opacity</string>
<string name="sidebartransparencysummary">Set the opacity of the sidebar</string>
<string name="showbackgroundonurlbarsummary">Adds a backdrop to the URL bar</string>
<string name="clearhistorytitle">Clear History</string>
<string name="clearcachetitle">Clear Cache</string>
<string name="clearcookiestitle">Clear Cookies</string>
<string name="disable_ads">Disable Ads</string>
<string name="persistenttitle">System Persistent</string>
<string name="persistentsummary">Keep launcher in memory. This will display a notification</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="complete">action completed</string>
<string name="failed">action failed</string>
<string name="nobackup">no backup found</string>
<string name="widgetsetupfail">failed to open widget setup</string>
<string name="savedimage">saved image to</string>
<string name="cat_title_appearance">Appearance</string>
<string name="cat_title_actionbar">Action Bar</string>
<string name="cat_title_tools">Tools</string>
<string name="cat_title_icons">Icons</string>
<string name="cat_title_other">Other</string>
<string name="cat_title_layout">Layout</string>
<string name="cat_title_setup">Setup</string>
<string name="disablesidebarsummary">Select to disable the favorites sidebar</string>
<string name="cat_title_gestures">Gestures</string>
<string name="urlbarcolortitle">URL bar color</string>
<string name="urlbarcolorsummary">Set the background color of the URL bar</string>
<string name="clearonexittitle">Clear browser traces on exit</string>
<string name="clearonexitsummary">Exiting browser clears history, cache and cookies</string>
<string name="nobookmarks">No Bookmarks set</string>
<string name="sidebar_custom">Custom</string>
<string name="sidebarcolortitle">Sidebar Color</string>
<string name="sidebarcolorsummary">Set the color of the sidebar</string>
<string name="sidebartextcolortitle">Sidebar Text Color</string>
<string name="sidebartextcolorsummary">Set the text color of the sidebar</string>
<string name="desktopviewtitle">Enable Desktop View</string>
<string name="desktopviewsummary">Display web pages like a desktop browser</string>
<string name="cat_title_content">Content</string>
<string name="enablecookies">Allow Cookies</string>
<string name="disabledrawersummary">Select to disable the app drawer</string>
<string name="enablejavascript">Enable JavaScript</string>
<string name="enableimages">Load Images</string>

<string name="urlbardefault">Enter Search or Address</string>
<string name="font_size_title">Font Size</string>
<string name="font_size_summary">Set the text font size</string>
<string name="sidebar_switched_title">Switch sidebar location</string>
<string name="sidebar_switched_summary">Sidebars will switch sides on the screen</string>
<string name="exit">Exit</string>
<string name="browserfullscreentitle">Immersive Browser</string>
<string name="browserfullscreensummary">remove padding from the bottom of the browser</string>
<string name="folderhidelabeltitle">Folder Label</string>
<string name="folderhidelabelsummary">Show or hide the labels under each folder</string>
<string name="folder_label_blank">Untitled Folder</string>
<string name="folderlabelcolortitle">Folder App Label Color</string>
<string name="folderlabelcolorsummary">Set the color of labels inside folders</string>
<string name="remove_from_folder">Remove from Folder</string>
<string name="move_to_home">Move to Home</string>
<string name="copyurl">Copy Link</string>
<string name="remove">Remove</string>
<string name="browser_removed_dialog">This app will be removed from the store due to policy complications. Please click on the following link to be directed to the newest Lucid Browser app:</string>
<string name="sslUntrustedTitle">SSL Certificate is not trusted</string>
<string name="sslUntrustedMessage">The webpage at\n\n%s\n\nhas a self-signed SSL certificate.</string>
<string name="sslIdMismatchTitle">SSL Certificate not valid for this webpage</string>
<string name="sslIdMismatchMessage" formatted="false">The webpage at\n\n%1s\n\nhas a SSL certificate that is only valid for %2s.</string>
<string name="sslExpiredTitle">SSL Certificate has expired</string>
<string name="sslExpiredMessage" formatted="false">The webpage at\n\n%1s\n\nhas an expired SSL certificate. It expired after %2s.</string>
<string name="sslNotYetValidTitle">SSL Certificate is not yet valid</string>
<string name="sslNotYetValidMessage" formatted="false">The webpage at\n\n%1s\n\nhas an SSL certificate that is not yet valid. It will be valid from %2s.</string>
<string name="sslWebsiteWarning">The webpage is possibly unsafe as the certificate cannot be verified. Please proceed with caution.</string>
<string name="sslProceedQuestion">Do you want to accept this certificate?</string>
<string name="browser">Browser</string>
<string name="paste">Paste</string>
<string name="close_tabs_on_exit_title">Close Tabs on Exit</string>
<string name="close_tabs_on_exit_summary">Exiting browser closes all tabs</string>
<string name="edit">Edit</string>
<string name="edit_bookmark">Edit Bookmark</string>
<string name="toggle_desktop_mode">Toggle Desktop Mode</string>
<string name="find_in_page">Find in Page</string>
<string name="confirm_exit_text">Are you sure you want to exit?</string>
<string name="please_wait">Please Wait\.\.\.</string>
<string name="exit_confirmation_title">Exit Confirmation</string>
<string name="exit_confirmation_summary">Check to enable an exit confirmation</string>
<string name="widgetpaddingtitle">Widget Padding</string>
<string name="widgetpaddingsummary">Set the padding around Widgets</string>
<string name="widgetpaddingmessage">Select the Widget Padding:</string>
<string name="holoDarkTitle">Use dark Theme</string>
<string name="holoDarkSummary">Check to use a dark theme in settings and bookmarks (Will restart settings to apply theme)</string>
<string name="hide_actionbar_title">Hide ActionBar</string>
<string name="hide_actionbar_summary">Hide the actionbar when scrolling page down</string>
<string name="apply">Apply</string>
<string name="remove_browsing_traces">Remove browser traces…</string>
<string name="disable_suggestions_title">Disable search suggestions</string>
<string name="search_hidden_apps_title">Search Hidden Apps</string>
<string name="search_hidden_apps_summary">Display hidden apps when searching</string>
<string name="action_openrecents">Open Recents</string>
<string name="action_opennotificationpanel">Open Notification Panel</string>
<string name="add_bookmark_folder">Add new Folder</string>
<string name="add_bookmark_folder_hint">Enter name of new Folder…</string>
<string name="edit_bookmark_folder">Edit Bookmark Folder</string>
<string name="remove_bookmark_folder_confirm">Do you really want to remove this folder? The content of it will be deleted too.</string>
<string name="bookmark_move">Move</string>
<string name="move_here">MOVE HERE</string>
<string name="rate">Rate</string>
<string name="more_apps">More Apps</string>
<string name="more">More</string>
<string name="step_browser_title">Web Browser</string>
<string name="step_browser_summary">This is the browser. You can disable or rearrange this page from within \"Manage Screens\"</string>
<string name="step_browser_sidebar_title">Browser Sidebar</string>
<string name="step_browser_sidebar_summary">Access the browser sidebar by swiping from the edge of the screen</string>
<string name="actionbartextstyletitle">ActionBar Item Style</string>
<string name="actionbartextstylesummary">Set ActionBar Item Style</string>
<string name="showbackgroundonurlbartitle">Show Backdrop on URL bar</string>
<string name="searchcontactstitle">Search Contacts</string>
<string name="searchcontactssummary">Enable or disable searching contacts</string>

<string name="version">Version</string>
<string name="community">Visit community on Google+</string>
<string name="licence_beer_github">THE BEER-WARE LICENSE" (Rev42).\nTap to view project on GitHub</string>
<string name="licence_apache20_github">Apache 2.0.\nTap to view project on GitHub</string>
<string name="search_engine">Search Engine</string>

<string name="first_letter_search_title">First letter search</string>
<string name="resettitle">Restore settings to default</string>
<string name="resetsummary">Reset all the settings to their default value</string>

<string name="first_letter_search_summary">search based off the beginning of the titles</string>

<string name="actionbar_item_color_title">Action Bar Item Color</string>
<string name="actionbar_item_color_summary">Set the color of items in the action bar</string>

<string name="MKCalc">MKCalculator support it</string>
<string name="MK_description">Help support the project by donating to my account in xda</string>

<string name="download_started">Download started</string>
<string name="choose_upload">Choose file for upload</string>
<string name="contactto">my email is: simokb46@gmail.com</string>
<string name="thanksto">Powerpoint45 for his original source</string>
<string name="Abouttheapp">about the app</string>
<string name="developer">Simo Kotbi Moroccan Developer</string>
</resources>


