<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" >

    <PreferenceScreen
        android:key="mainsettings"
        android:title="@string/mainsettingstitle" >
        <PreferenceCategory
            android:key="mainsettings_appearance"
            android:title="@string/cat_title_appearance" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="fullscreen"
                android:summary="@string/fullscreensummary"
                android:title="@string/fullscreentitle" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="transparentnav"
                android:summary="@string/transparentnavsummary"
                android:title="@string/transparentnavtitle" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="transparentstatus"
                android:summary="@string/transparentstatussummary"
                android:title="@string/transparentstatustitle" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="holodark"
                android:summary="@string/holoDarkSummary"
                android:title="@string/holoDarkTitle" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/cat_title_actionbar" >
            <preferences.ColorPickerPreference
                android:defaultValue="@color/urlback"
                android:key="actionbarcolor"
                android:summary="@string/actionbarcolorsummary"
                android:title="@string/actionbarcolortitle" />
            <preferences.ColorPickerPreference
                android:defaultValue="@android:color/white"
                android:key="textcolor"
                android:summary="@string/actionbar_item_color_summary"
                android:title="@string/actionbar_item_color_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="sidebarsettings"
        android:title="@string/sidebarsettingstitle" >
        <PreferenceCategory
            android:key="sideappearance"
            android:title="@string/cat_title_appearance" >
            <ListPreference
                android:defaultValue="w"
                android:entries="@array/sidebarthemes"
                android:entryValues="@array/sidebartheme_values"
                android:key="sidebartheme"
                android:summary="@string/sidebarthemesummary"
                android:title="@string/sidebarthemetitle" />

            <preferences.ColorPickerPreference
                android:defaultValue="@android:color/black"
                android:key="sidebarcolor"
                android:summary="@string/sidebarcolorsummary"
                android:title="@string/sidebarcolortitle" />
            <preferences.ColorPickerPreference
                android:defaultValue="@android:color/white"
                android:key="sidebartextcolor"
                android:summary="@string/sidebartextcolorsummary"
                android:title="@string/sidebartextcolortitle" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="swapLayout"
                android:summary="@string/sidebar_switched_summary"
                android:title="@string/sidebar_switched_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/websettingstitle" >
        <PreferenceCategory android:title="@string/cat_title_content" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enableimages"
                android:summary=""
                android:title="@string/enableimages" />

            <!--
            Uncomment if wanted by users
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enablejavascript"
                android:summary=""
                android:title="@string/enablejavascript" />

            -->

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enablecookies"
                android:summary=""
                android:title="@string/enablecookies" />

            <PreferenceScreen android:title="@string/remove_browsing_traces" >
                <Preference
                    android:key="clearbrowserhistory"
                    android:title="@string/clearhistorytitle" />
                <Preference
                    android:key="clearbrowsercache"
                    android:title="@string/clearcachetitle" />
                <Preference
                    android:key="clearbrowsercookies"
                    android:title="@string/clearcookiestitle" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="clearonexit"
                    android:summary="@string/clearonexitsummary"
                    android:title="@string/clearonexittitle" />
            </PreferenceScreen>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/cat_title_appearance" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="showbrowserbackdrop"
                android:summary="@string/showbackgroundonurlbarsummary"
                android:title="@string/showbackgroundonurlbartitle" />

            <preferences.ColorPickerPreference
                android:defaultValue="@color/urlfront"
                android:dependency="showbrowserbackdrop"
                android:key="urlbarcolor"
                android:summary="@string/urlbarcolorsummary"
                android:title="@string/urlbarcolortitle" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="usedesktopview"
                android:summary="@string/desktopviewsummary"
                android:title="@string/desktopviewtitle" />

            <preferences.SeekBarPreference
                android:defaultValue="2"
                android:key="webfontsize"
                android:max="4"
                android:summary="@string/font_size_summary"
                android:title="@string/font_size_title" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/cat_title_tools" >
            <ListPreference
                android:defaultValue="g"
                android:entries="@array/searchengines"
                android:entryValues="@array/searchengines_values"
                android:key="searchengine"
                android:title="@string/search_engine" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disablesuggestions"
                android:title="@string/disable_suggestions_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="closetabsonexit"
                android:summary="@string/close_tabs_on_exit_summary"
                android:title="@string/close_tabs_on_exit_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="exitconfirmation"
                android:summary="@string/exit_confirmation_summary"
                android:title="@string/exit_confirmation_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/advancedsettingstitle" >
        <PreferenceCategory android:title="@string/cat_title_setup" >
            <Preference
                android:key="reset"
                android:summary="@string/resetsummary"
                android:title="@string/resettitle" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/cat_title_other" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="systempersistent"
                android:summary="@string/persistentsummary"
                android:title="@string/persistenttitle" />
        </PreferenceCategory>
    </PreferenceScreen>
<PreferenceScreen android:title="@string/Abouttheapp" android:key="About the app">
<PreferenceCategory android:title="@string/developer" android:key="Developer" />
<PreferenceCategory android:title="@string/thanksto" android:key="Thanks to" />
<PreferenceCategory android:title="@string/contactto" android:key="Contact" />
</PreferenceScreen>
<Preference
        android:icon="@drawable/mkcalc"
        android:key="calc"
        android:summary="@string/MK_description"
        android:title="@string/MKCalc" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/android/apps-games/app-mkcalculator-nice-app-to-calculate-t3326764/post65608542#post65608542" />
    </Preference>


</PreferenceScreen>